# datagaze-test

./: .env  README.txt  just.txt  main.py  pyproject.toml  requirements.txt  test_log.txt
app/: database.py  models.py  schemas.py  services.py
app/api/: auth.py  weather.py
tests/api/: test_auth.py  test_weather.py
tests/unit/: test_services.py
